Share functionality added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="read_the_world_today">Read the world today</string>
     <string name="news_app">News App</string>
     <string name="categories">Categories.</string>
+    <string name="share">share</string>
 </resources>
